# IZ2

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  README.md
array_utils/: array_functions.c
dynamic_library/: sum_interface.c
include/: sum_interface.h
src/: main.c
static_library/: sum_interface.c
unit_tests/: CMakeLists.txt  comparison.cpp  multi.cpp  single.cpp
unit_tests/stress_data/: stressTest1.txt  stressTest2.txt
